[gd_scene load_steps=4 format=3 uid="uid://cebpm4s1kkak1"]

[ext_resource type="Script" path="res://MISC/controls config/menu.gd" id="1_rtpil"]
[ext_resource type="PackedScene" uid="uid://dppawnttepfja" path="res://MISC/controls config/control_option.tscn" id="3_3kmeh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xljuc"]

[node name="Divider" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtpil")

[node name="JumpTo" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="JumpTo"]
layout_mode = 2
text = "Default"

[node name="Top" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Top"

[node name="SteerDigital" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Steering (Analog)"

[node name="SteerAnalog" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Steering (Digital)"

[node name="Throttle" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Throttle"

[node name="Brake" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Brake"

[node name="Handbrake" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Handbrake"

[node name="Clutch" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Clutch"

[node name="HSeparator" type="HSeparator" parent="JumpTo"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_xljuc")

[node name="Save" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Save "

[node name="Apply" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Apply"

[node name="Cancel" type="Button" parent="JumpTo"]
layout_mode = 2
text = "Cancel"

[node name="Config" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="List" type="VBoxContainer" parent="Config"]
layout_mode = 2

[node name="input_options" type="OptionButton" parent="Config/List"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Keyboard & Mouse"
popup/item_0/id = 1
popup/item_1/text = "Keyboard"
popup/item_1/id = 3
popup/item_2/text = "Touch Controls"
popup/item_2/id = 0
popup/item_3/text = "Joypad"
popup/item_3/id = 2

[node name="gear_assist" type="HSlider" parent="Config/List"]
custom_minimum_size = Vector2(240, 60)
layout_mode = 2
max_value = 2.0

[node name="text" type="Label" parent="Config/List/gear_assist"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Shift Assist Level"

[node name="amount" type="Label" parent="Config/List/gear_assist"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "0.0"
vertical_alignment = 2

[node name="SteerAnalog" type="VBoxContainer" parent="Config/List"]
layout_mode = 2

[node name="Label" type="Label" parent="Config/List/SteerAnalog"]
layout_mode = 2
text = "Analog Steering:"
horizontal_alignment = 1

[node name="SteerSensitivity" parent="Config/List/SteerAnalog" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"SteerSensitivity"

[node name="value" type="HSlider" parent="Config/List/SteerAnalog/SteerSensitivity"]
layout_mode = 2
min_value = 1.0
max_value = 2.0
step = 0.001
value = 1.0

[node name="UseAnalogSteering" parent="Config/List/SteerAnalog" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"UseAnalogSteering"

[node name="value" type="CheckBox" parent="Config/List/SteerAnalog/UseAnalogSteering"]
layout_mode = 2

[node name="SteerDigital" type="VBoxContainer" parent="Config/List"]
layout_mode = 2

[node name="Label" type="Label" parent="Config/List/SteerDigital"]
layout_mode = 2
text = "Digital Steering"
horizontal_alignment = 1

[node name="KeyboardCompensateSpeed" parent="Config/List/SteerDigital" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"KeyboardCompensateSpeed"

[node name="value" type="HSlider" parent="Config/List/SteerDigital/KeyboardCompensateSpeed"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="KeyboardReturnSpeed" parent="Config/List/SteerDigital" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"KeyboardReturnSpeed"

[node name="value" type="HSlider" parent="Config/List/SteerDigital/KeyboardReturnSpeed"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="KeyboardSteerSpeed" parent="Config/List/SteerDigital" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"KeyboardSteerSpeed"

[node name="value" type="HSlider" parent="Config/List/SteerDigital/KeyboardSteerSpeed"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="SteeringAssistanceAngular" parent="Config/List/SteerDigital" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"SteeringAssistanceAngular"

[node name="value" type="HSlider" parent="Config/List/SteerDigital/SteeringAssistanceAngular"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="SteeringAssistance" parent="Config/List/SteerDigital" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"SteeringAssistance"

[node name="value" type="HSlider" parent="Config/List/SteerDigital/SteeringAssistance"]
layout_mode = 2
max_value = 2.0
step = 0.001

[node name="SteerAmountDecay" parent="Config/List/SteerDigital" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"SteerAmountDecay"

[node name="value" type="HSlider" parent="Config/List/SteerDigital/SteerAmountDecay"]
layout_mode = 2
max_value = 0.2
step = 0.001

[node name="Throttle" type="VBoxContainer" parent="Config/List"]
layout_mode = 2

[node name="Label" type="Label" parent="Config/List/Throttle"]
layout_mode = 2
text = "Throttle"
horizontal_alignment = 1

[node name="digital" parent="Config/List/Throttle" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"IsThrottleDigital"

[node name="value" type="CheckBox" parent="Config/List/Throttle/digital"]
layout_mode = 2

[node name="on" parent="Config/List/Throttle" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"OnThrottleRate"

[node name="value" type="HSlider" parent="Config/List/Throttle/on"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="off" parent="Config/List/Throttle" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"OffThrottleRate"

[node name="value" type="HSlider" parent="Config/List/Throttle/off"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="max" parent="Config/List/Throttle" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"MaxThrottle"

[node name="value" type="HSlider" parent="Config/List/Throttle/max"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Clutch" type="VBoxContainer" parent="Config/List"]
layout_mode = 2

[node name="Label" type="Label" parent="Config/List/Clutch"]
layout_mode = 2
text = "Clutch"
horizontal_alignment = 1

[node name="digital" parent="Config/List/Clutch" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"IsClutchDigital"

[node name="value" type="CheckBox" parent="Config/List/Clutch/digital"]
layout_mode = 2

[node name="on" parent="Config/List/Clutch" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"OnClutchRate"

[node name="value" type="HSlider" parent="Config/List/Clutch/on"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="off" parent="Config/List/Clutch" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"OffClutchRate"

[node name="value" type="HSlider" parent="Config/List/Clutch/off"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="max" parent="Config/List/Clutch" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"MaxClutch"

[node name="value" type="HSlider" parent="Config/List/Clutch/max"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Handbrake" type="VBoxContainer" parent="Config/List"]
layout_mode = 2

[node name="Label" type="Label" parent="Config/List/Handbrake"]
layout_mode = 2
text = "Handbrake"
horizontal_alignment = 1

[node name="digital" parent="Config/List/Handbrake" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"IsHandbrakeDigital"

[node name="value" type="CheckBox" parent="Config/List/Handbrake/digital"]
layout_mode = 2

[node name="on" parent="Config/List/Handbrake" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"OnHandbrakeRate"

[node name="value" type="HSlider" parent="Config/List/Handbrake/on"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="off" parent="Config/List/Handbrake" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"OffHandbrakeRate"

[node name="value" type="HSlider" parent="Config/List/Handbrake/off"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="max" parent="Config/List/Handbrake" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"MaxHandbrake"

[node name="value" type="HSlider" parent="Config/List/Handbrake/max"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Brake" type="VBoxContainer" parent="Config/List"]
layout_mode = 2

[node name="Label" type="Label" parent="Config/List/Brake"]
layout_mode = 2
text = "Brake"
horizontal_alignment = 1

[node name="digital" parent="Config/List/Brake" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"IsBrakeDigital"

[node name="value" type="CheckBox" parent="Config/List/Brake/digital"]
layout_mode = 2

[node name="on" parent="Config/List/Brake" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"OnBrakeRate"

[node name="value" type="HSlider" parent="Config/List/Brake/on"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="off" parent="Config/List/Brake" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"OffBrakeRate"

[node name="value" type="HSlider" parent="Config/List/Brake/off"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="max" parent="Config/List/Brake" instance=ExtResource("3_3kmeh")]
layout_mode = 2
var_name = &"MaxBrake"

[node name="value" type="HSlider" parent="Config/List/Brake/max"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="PresetSelect" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="List" type="VBoxContainer" parent="PresetSelect"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="Label" parent="PresetSelect/List"]
layout_mode = 2
text = "Presets:"

[connection signal="pressed" from="JumpTo/Top" to="." method="_on_top_pressed"]
[connection signal="pressed" from="JumpTo/SteerDigital" to="." method="_on_steer_digital_pressed"]
[connection signal="pressed" from="JumpTo/SteerAnalog" to="." method="_on_steer_analog_pressed"]
[connection signal="pressed" from="JumpTo/Throttle" to="." method="_on_throttle_pressed"]
[connection signal="pressed" from="JumpTo/Brake" to="." method="_on_brake_pressed"]
[connection signal="pressed" from="JumpTo/Handbrake" to="." method="_on_handbrake_pressed"]
[connection signal="pressed" from="JumpTo/Clutch" to="." method="_on_clutch_pressed"]
[connection signal="pressed" from="JumpTo/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="JumpTo/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="JumpTo/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="item_selected" from="Config/List/input_options" to="." method="_on_input_options_item_selected"]
[connection signal="drag_ended" from="Config/List/gear_assist" to="." method="_on_gear_assist_drag_ended"]
[connection signal="value_changed" from="Config/List/gear_assist" to="." method="_on_gear_assist_value_changed"]
